# rust-mcp

./: Cargo.toml  project-context.txt  readme.md
src/: main.rs
