[package]
name = "mcp-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
schemars = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
